# DM-Project

./: CMakeLists.txt  DM.pro  DM.pro.user.e4dfde4  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Ivanitski_Ilya_hotfix/: Natural.cpp
UI/: mainwindow.cpp  mainwindow.h  mainwindow.ui
build-linux/: DM  DM.debug  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
build-linux/DistributionKit/: DM.sh
build-linux/DistributionKit/lib/: libQt5DBus.so.5  libQt5Svg.so.5  libQt5XcbQpa.so.5
build-mac/: .qmake.stash  Makefile  moc_mainwindow.cpp  moc_predefs.h  ui_mainwindow.h
build-mac/DM.app/Contents/: Info.plist
build-mac/DM.app/Contents/Frameworks/: libfreetype.6.dylib  libglib-2.0.0.dylib  libgthread-2.0.0.dylib  libintl.8.dylib  libjpeg.8.dylib  liblzma.5.dylib  libpcre2-16.0.dylib  libpcre2-8.0.dylib  libpng16.16.dylib  libtiff.6.dylib  libwebp.7.dylib  libwebpdemux.2.dylib  libwebpmux.3.dylib  libzstd.1.dylib
build-mac/DM.app/Contents/MacOS/: DM
build-mac/DM.app/Contents/Resources/: DM.icns
build-windows/: DM_resource.rc  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-windows/release/: moc_mainwindow.cpp
modules/Integer/: Integer.cpp  Integer.h
modules/Integer/src/Gurkov_Arseniy_2384/: Gurkov_Arseniy.cpp  Gurkov_Arseniy_tests.cpp
modules/Integer/src/Lavrenova_Yulia_2384/: Lavrenova_Yulia.cpp  Lavrenova_Yulia_tests.cpp
modules/Integer/src/Sots_Ekaterina_2384/: SotsEkaterina.cpp  SotsEkaterinaTest.cpp
modules/Integer/src/Tsygankov_Roman_2384/: Tsygankov_Roman.cpp  Tsygankov_Roman_tests.cpp
modules/Integer/src/Tsygulev_Stanislav_2383/: Tsygulev_Stanislav.cpp  Tsygulev_Stanislav_tests.cpp
modules/Integer/src/Valeyeva_Alina_2384/: Valeyeva_Alina.cpp  Valeyeva_Alina_tests.cpp
modules/Integer/src/Vozgrin_Miron_N2382/: Vozgrin_Miron.cpp  Vozgrin_Miron_tests.cpp
modules/Interfaces/: Model.h
modules/Natural/: Natural.cpp  Natural.h
modules/Natural/src/Borisov_Ivan_P_2383/: Borisov_Ivan_P.cpp  Borisov_Ivan_P_tests.cpp
modules/Natural/src/Damakin_Roman_2384/: Damakin_Roman.cpp  Damakin_Roman_tests.cpp
modules/Natural/src/Gurkov_Arseniy_2384/: Gurkov_Arseniy.cpp  Gurkov_Arseniy_tests.cpp
modules/Natural/src/Ilyin_Pavel_2383/: Ilyin_Pavel.cpp  Ilyin_Pavel_tests.cpp
modules/Natural/src/Ivanitsky_Ilya_2383/: Ivanitsky_Ilya.cpp  Ivanitsky_Ilya_tests.cpp
modules/Polynomial/: Polynomial.cpp  Polynomial.h
modules/Rational/: Rational.cpp  Rational.h
modules/utils/: utils.cpp  utils.h
tests/IntegerTests/: CMakeLists.txt  tests.cpp
tests/NaturalTests/: CMakeLists.txt  tests.cpp
tests/PolynomialTests/: CMakeLists.txt  tests.cpp
tests/RationalTests/: CMakeLists.txt  tests.cpp
tests/googletest/: CMakeLists.txt
(+81 files in other folders)
